[MESSAGE BROKER] add producer and consumer list view

--- a/MessageBroker_front/src/app/app.component.html
+++ b/MessageBroker_front/src/app/app.component.html
@@ -1,4 +1,6 @@
 <h1>MESSAGE BROKER ADMIN</h1>
 <div id="header">
   <app-channels></app-channels>
+  <app-producers></app-producers>
+  <app-consumers></app-consumers>
 </div>
