--- a/MessageBroker_front/src/app/channels/channels.component.html
+++ b/MessageBroker_front/src/app/channels/channels.component.html
@@ -1,13 +1,20 @@
 <div class="card">
     <h2>Channels list</h2>
-    @if (channels$ | async; as channels){
-        @for (channel of channels; track channel.id) {
-            <div class="card">
-                {{channel.name}}
-            </div>
-        }
+
+    @if(channelErrorSignal()){
+        <p class="error">Error while loading channels<br>Retrying ...</p>
     }
-    @else {
+    @if(channelLoadingSignal()){
         <p>Channels loading</p>
+    }@else{
+        @if(channelSignal().length==0){
+            <p>No channel found</p>
+        }@else {
+            @for (channel of channelSignal(); track channel.id) {
+                <button class="button" (click)="selectChannel(channel)">
+                    {{channel.name}}
+                </button>
+            }
+        }
     }
 </div>
