--- a/MessageBroker_front/src/styles.css
+++ b/MessageBroker_front/src/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: #444;
-    color: #DDF;
+    color: #DEF;
 }
 
 h1, h2{
@@ -9,8 +9,33 @@ h1, h2{
 
 .card{
     background-color: #333;
-    border: .5rem solid #99B;
-    border-radius: 10%;
+    border: .5rem solid #89A;
+    border-radius: 1rem;
     padding:.5rem;
     margin:.5rem;
+    box-shadow: inset 0 0 .6rem .1rem #DDF8;
+}
+
+.error{
+    color:red;
+}
+
+button{
+    display:block;
+}
+
+.button{
+    color: #DEF;
+    background-color: #112;
+    border: .2rem solid #29B;
+    border-radius: .7rem;
+    cursor: pointer;
+    text-align: center;
+    padding: 1rem;
+    transition: background-color, .4s ease-in-out;
+    box-shadow: inset 0 0 .6rem .1rem #3AC8;
+}
+
+.button:hover{
+    background-color: #224;
 }
